<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:keepScreenOn="true"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamNameTextView"
                    android:text="@string/teamA" />

                <TextView
                    android:id="@+id/ScoreTeamA"
                    style="@style/TeamScoreTextView"
                    android:text="0"

                    />

                <Button
                    android:id="@+id/UndoA"
                    style="@style/ButtonOutlineBorder"
                    android:text="@string/back"
                    android:onClick="backScoreA"
                    />

                <Button
                    android:id="@+id/Add1ButtonA"
                    style="@style/ButtonOutlineBorder"
                    android:onClick="addOneTeamA"
                    android:text="@string/one" />


                <Button
                    android:id="@+id/Add3ButtonA"
                    style="@style/ButtonOutlineBorder"
                    android:onClick="addThreeTeamA"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/Add6ButtonA"
                    style="@style/ButtonOutlineBorder"
                    android:onClick="addSixTeamA"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/Add9ButtonA"
                    style="@style/ButtonOutlineBorder"
                    android:onClick="addNineTeamA"
                    android:text="@string/nine" />

                <Button
                    android:id="@+id/Add12ButtonA"
                    style="@style/ButtonOutlineBorder"
                    android:onClick="addTwelveTeamA"
                    android:text="@string/twelve" />

            </LinearLayout>

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorLabel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">


                <TextView
                    style="@style/TeamNameTextView"
                    android:text="@string/teamB" />

                <TextView
                    android:id="@+id/ScoreTeamB"
                    style="@style/TeamScoreTextView"
                    android:text="0" />

                <Button
                    style="@style/ButtonOutlineBorder"
                    android:onClick="backScoreB"
                    android:text="@string/back"
                    android:id="@+id/UndoB"
                    />

                <Button
                    style="@style/ButtonOutlineBorder"
                    android:text="@string/one"
                    android:onClick="addOneTeamB"
                    android:id="@+id/Add1ButtonB"
                    />


                <Button
                    style="@style/ButtonOutlineBorder"
                    android:onClick="addThreeTeamB"
                    android:text="@string/three"
                    android:id="@+id/Add3ButtonB"/>

                <Button
                    style="@style/ButtonOutlineBorder"
                    android:onClick="addSixTeamB"
                    android:text="@string/six"
                    android:id="@+id/Add6ButtonB"/>

                <Button
                    style="@style/ButtonOutlineBorder"
                    android:onClick="addNineTeamB"
                    android:text="@string/nine"
                    android:id="@+id/Add9ButtonB"/>

                <Button
                    style="@style/ButtonOutlineBorder"
                    android:onClick="addTwelveTeamB"
                    android:text="@string/twelve"
                    android:id="@+id/Add12ButtonB"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/ButtonOutlineBorder"
            android:layout_marginTop="20dp"
            android:onClick="resetPoints"
            android:text="@string/reset" />

    </LinearLayout>

</ScrollView>